# toefl-gre-prep

./: .gitignore  .vercelignore  CLAUDE.md  README.md  env.sh  requirements.txt  run.sh  vercel.json
.playwright-mcp/: page-2026-07-19T15-05-34-846Z.yml
api/: index.py  requirements.txt
docs/: 2026-toefl-format.md  DEPLOY-VERCEL.md  STORAGE.md  vocab-loop-gre.md  vocab-loop.md
gre/vocab/: gre_vocab.json
plan/: 14-day-plan.md
prep-core/: .gitignore  README.md  pyproject.toml
prep-core/src/prep_core/: __init__.py  audio.py  config.py  feedback.py  generate.py  progress.py  providers.py  rubric.py  serverutil.py  srs.py
prep-core/tests/: test_feedback.py  test_srs.py  test_vocab_mock.py
scripts/: add_ipa.py  add_syn_ant.py  assemble_spec.py  backup_scratch.sh  build_vocab.py  convert_tpo.py  enrich_cron.sh  enrich_etym.py  enrich_vocab.py  enrich_workflow.js  etym_workflow.js  fix_pos.py  fold_enrich.py  fold_etym_out.py  fold_pos.py  fold_scene_out.py  fold_scene_vocab.py  fold_speaking_prompts.py  gen_bank.py  gen_cron.sh  kaikki_extract.py  make_enrich_batches.py  make_etym_batches.py  make_pos_batches.py  make_scene_batches.py  merge_banks.py  merge_kaikki_fields.py  merge_rl.py  migrate_to_postgres.py  order_vocab.py  phrase_exchange.py  phrase_ipa.py  pos_workflow.js  scene_workflow.js  score_vocab.py  spec_intw_a1.json  spec_intw_a2.json  tpo_hf_vocab.py  tpo_parse_workflow.js
static/: index.html  login.html
tests/: test_sm2_parity.py
toefl/listening/: academic_talk.json  (+4 more)
vocab_web/: __init__.py  app.py  auth.py  db.py  sm2.py  store.py  tts.py
(+34 files in other folders)
