[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "prep-core"
version = "0.1.0"
description = "Exam-agnostic core for language-test prep tools (TOEFL, GRE): AI feedback, SRS, audio transcription, progress tracking."
requires-python = ">=3.10"
dependencies = [
    "anthropic>=0.40",
]

[project.optional-dependencies]
# Local speech-to-text for the speaking app. faster-whisper: no PyTorch, fast on CPU.
audio = ["faster-whisper>=1.0"]
dev = ["pytest>=8"]

[tool.setuptools.packages.find]
where = ["src"]
